--- a/style.css
+++ b/style.css
@@ -15,3 +15,15 @@ header * {
     height: 10px;
 }
 
+nav {
+    overflow: hidden;
+    background-color:#333;
+}
+
+nav {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+}
