--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
     margin: 0;
-    margin-top; 50px;
+    margin-top: 0px;
 }
 
 header {
     text-align: center;
-    background-color: #f1f1f1;
+    background-color: #f1f3f1;
     padding: 30px;
     
 }
@@ -15,15 +15,24 @@ header * {
     height: 10px;
 }
 
-nav {
+.nav {
     overflow: hidden;
-    background-color:#333;
+    background-color: rgb(228, 190, 190);
 }
 
-nav {
+.nav a{
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #000000;
     text-align: center;
-    padding: 14px 16px;
+    padding: 15px 80px;
+}
+
+.nav a:hover {
+    background-color: #ddd
+}
+
+.nav a.active {
+    background-color: #4caf50;
+    color: white;
 }
