--- a/style.css
+++ b/style.css
@@ -5,10 +5,14 @@ body {
 
 header {
     text-align: center;
-    background-color: #f1f3f1;
     padding: 30px;
-    font-family: 'Palatino';
-    
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    background:
+    url(sunrisephoto.jpg) no-repeat center;
+    height: 250px;
+    color: white;
+
 }
 
 header * {
@@ -19,7 +23,8 @@ header * {
 .nav {
     overflow: hidden;
     background-color: rgb(228, 190, 190);
-    font-family: 'Palatino';
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
 }
 
 .nav a{
@@ -40,17 +45,20 @@ header * {
 }
 
 .title {
-    font-family: 'Palatino';
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
     text-align: center;
 }
 
 .para {
-    font-family: 'Palatino';
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
     padding: 10px 20px;
 }
 
 .footer {
-    font-family: 'Palatino';
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
     font-size: 8px;
     padding: 10px;
 }
