--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ header {
     text-align: center;
     padding: 30px;
     font-family: 'Roboto', sans-serif;
+    font-style: italic;
     font-weight: bolder;
     background:
     url(sunrisephoto.jpg) no-repeat center;
