--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 header {
     text-align: center;
     padding: 30px;
-    font-family: 'Bebas Neue', sans-serif;
+    font-family: 'Bebas Neue', serif;
     font-style: italic;
     font-weight: 100;
     background:
@@ -24,7 +24,7 @@ header * {
 .nav {
     overflow: hidden;
     background-color: black;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Bebas Neue', serif;
     font-weight: 100;
 }
 
@@ -46,13 +46,13 @@ header * {
 }
 
 .title {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', serif;
     font-weight: 100;
     text-align: center;
 }
 
 .para {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', serif;
     text-indent: 2em;
     font-weight: 100;
     padding: 10px 20px;
@@ -67,7 +67,7 @@ header * {
 .footer p {
     color: white;
     font-size: 8px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', serif;
     font-weight: 100;
 
 }
