--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header * {
 }
 
 .title {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Bebas Neue', sans-serif;
     font-weight: 100;
     text-align: center;
 }
