changed nav text alignment

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header * {
     background-color: black;
     font-family: 'Bebas Neue', sans-serif;
     font-weight: 100;
+    text-align: center;
 }
 
 .nav a{
