--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ header * {
     font-family: 'Roboto', sans-serif;
     text-indent: 2em;
     font-weight: 100;
+    margin: 20px;
     padding: 10px 20px;
 }
 
