--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header * {
     font-weight: 100;
     text-align: center;
     border-width: 5px;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 .para {
@@ -62,7 +62,7 @@ header * {
     border-width: 2px;
     border-color: black;
     margin: 100px;
-    padding: 10px 20px;
+    padding: 10px;
 }
 
 .footer {
