--- a/style.css
+++ b/style.css
@@ -17,8 +17,15 @@ header {
 }
 
 header * {
-    display: inline;
-    height: 10px;
+    text-align: center;
+    padding: 30px;
+    font-family: 'Bebas Neue', sans-serif;
+    font-style: italic;
+    font-weight: 100;
+    background:
+    url(sunrisephoto.jpg) no-repeat center;
+    height: 250px;
+    color: white;
 }
 
 .nav {
