--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin-top: 0px;
 }
 
-header * {
+header {
     text-align: center;
     padding: 30px;
     font-family: 'Bebas Neue', sans-serif;
