changed video size

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header {
 
 .video {
     text-align: center;
-    font-size: large;
+    font-size: 150%;
     border-width: 2px;
     margin: 10px;
 
