--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header {
 
 .nav a.active {
     background-color: #4caf50;
-    color: white;
+    color: #aec6cf;
 }
 
 .title {
@@ -56,7 +56,7 @@ header {
     text-indent: 2em;
     font-weight: 100;
     border-style: solid;
-    border-width: 2px;
+    border-width: 1px;
     border-color: black;
     margin: 100px;
     padding: 20px;
