--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header {
     border-style: solid;
     border-width: 1px;
     border-color: black;
-    margin: 100px;
+    margin: 100px 50px;
     padding: 20px;
 }
 
