--- a/style.css
+++ b/style.css
@@ -27,11 +27,11 @@ header {
 }
 
 .nav a{
-    float: left;
+    float: center;
     display: block;
     color: white;
     text-align: center;
-    padding: 15px 150px;
+    padding: 15px 100px;
 }
 
 .nav a:hover {
