--- a/style.css
+++ b/style.css
@@ -83,6 +83,6 @@ header {
 }
 
 .homepage {
-    background-image: url("gradient_bg.png");
+    background-image: url("Unknown.jpeg");
     background-repeat: repeat-x;
 }
