--- a/style.css
+++ b/style.css
@@ -83,6 +83,6 @@ header {
 }
 
 .homepage {
-    background-image: url("Unknown.jpeg");
+    background-image: url("https://i.ytimg.com/vi/PLAJTuLNI7A/maxresdefault.jpg");
     background-repeat: repeat-x;
 }
