--- a/style.css
+++ b/style.css
@@ -86,5 +86,6 @@ header {
 
 .homepage {
     background-image: url("https://i.ytimg.com/vi/PLAJTuLNI7A/maxresdefault.jpg");
+    opacity: 0.30;
     background-repeat: repeat-x;
 }
