--- a/style.css
+++ b/style.css
@@ -28,8 +28,9 @@ header {
 .image {
     opacity: 1;
     display: block;
-    width: 100%;
+    width: 150%;
     height: auto;
+    position: center;
     transition: .5s ease;
     backface-visibility: hidden;
 }
