--- a/style-bs.css
+++ b/style-bs.css
@@ -8,12 +8,34 @@ html, body {
 
 .navbar {
   padding: 8px;
-  color: black;
 }
 
+.navbar-nav li {
+  padding-right: 10px;
+}
+.nav-link {
+  font-size: 1.1em !important;
+}
 
+.padding {
+  padding-bottom: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 
+.welcome {
+  width: 75%;
+  margin: 0 auto;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
 
+footer {
+  background-color: #3f3f3f;
+  color: #d5d5d5;
+  padding-top: 1px;
+  height: 75%
+}
 
 
 
@@ -75,29 +97,6 @@ figure {
 header {
   background:url(sunrisephoto.jpg) no-repeat center;
   height: 500px;
-}
-
-/*-- Footer -- */
-.card-title {
-  text-align: center;
-  padding: 10px;
-}
-
-.card-text {
-  padding: 1px 15px;
-}
-
-.lead {
-  text-align: center;
-}
-
-.footer {
-  font-size: 8px;
-}
-
-.para {
-  font-size: 20px;
-  padding: 50px;
 }
 
 
