--- a/style-bs.css
+++ b/style-bs.css
@@ -41,7 +41,7 @@ html, body {
 }
 
 .container .btn {
-	position: absolute;
+	position: center;
 	top: 50%;
 	left: 50%;
 	transform: translate (-50%, -50%);
