--- a/style-bs.css
+++ b/style-bs.css
@@ -41,7 +41,7 @@ html, body {
 }
 
 .container .btn {
-	position: center;
+	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate (-50%, -50%);
@@ -51,7 +51,7 @@ html, body {
 	padding: 12px 24px;
 	border: none;
 	cursor: pointer;
-	border-radius: 5px
+	border-radius: 2px;
 }
 
 .container .btn:hover {
