--- a/style-bs.css
+++ b/style-bs.css
@@ -41,12 +41,12 @@ html, body {
     width: 200%;
     height: auto;
     position: center;
-    transition: .5s ease;
+    transition: .3s ease;
     backface-visibility: hidden;
 }
 
 .middle {
-    transition: .5s ease;
+    transition: .2s ease;
     opacity: 0;
     position: absolute;
     top: 50%;
@@ -70,7 +70,7 @@ html, body {
 }
 
 .text {
-    background-color: #77dd77;
+    background-color: aqua;
     color: white;
     font-size: 16px;
     padding: 16px 32 px;
