--- a/style-bs.css
+++ b/style-bs.css
@@ -32,13 +32,13 @@ html, body {
 
 .container {
     position: relative;
-    width: 50%;
+    width: 20%;
 }
 
 .image {
     opacity: 1;
     display: block;
-    width: 200%;
+    width: 20%;
     height: auto;
     position: center;
     transition: .3s ease;
@@ -70,7 +70,7 @@ html, body {
 }
 
 .text {
-    background-color: aqua;
+    background-color: pink;
     color: white;
     font-size: 16px;
     padding: 16px 32 px;
