--- a/style-bs.css
+++ b/style-bs.css
@@ -57,7 +57,13 @@ html, body {
     text-align: center;
 }
 
+.container:hover .image {
+    opacity: 0.3;
+}
 
+.container:hover .middle {
+    opacity: 1;
+}
 
 .middle:hover .text1 {
     background-color: pink;
@@ -66,12 +72,7 @@ html, body {
     padding: 10px 20px;
 }
 
-.middle:hover .text2 {
-	background-color: pink;
-    color: black;
-    font-size: 16px;
-    padding: 10px 20px;
-}
+
 
 footer {
   background-color: #3f3f3f;
