--- a/style-bs.css
+++ b/style-bs.css
@@ -79,7 +79,13 @@ footer {
   height: 7%
 }
 
-
+/*--- Stress Calculator ---*/
+.para .form {
+  width: 75%;
+  margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 
 /*---Media Queries --*/
 @media (max-width: 992px) {
