--- a/style-bs.css
+++ b/style-bs.css
@@ -65,11 +65,7 @@ html, body {
     opacity: 1;
 }
 
-.text1, .text2 {
-	transition: opacity 0.5s linear;
-}
-
-.middle:hover .text1 {
+.middle:hover .text {
     background-color: pink;
     color: black;
     font-size: 16px;
