--- a/style-bs.css
+++ b/style-bs.css
@@ -68,6 +68,7 @@ html, body {
 .middle:hover .text {
     background-color: pink;
     color: black;
+    font-family: 'Comic Sans MS', sans-serif; 
     font-size: 16px;
     padding: 10px 20px;
 }
