--- a/style-bs.css
+++ b/style-bs.css
@@ -7,12 +7,12 @@ html, body {
 }
 
 input {
-	margin: 20px;
+	margin-left: 20px;
 	padding: none;
 }
 
 h4 {
-	margin: 20px;
+	margin-left: 20px;
 	padding: none;
 }
 
