--- a/style-bs.css
+++ b/style-bs.css
@@ -99,7 +99,7 @@ td {
 }
 
 .container:hover .image {
-    opacity: 0.3;
+    opacity: 0.5;
 }
 
 .container:hover .middle {
@@ -111,7 +111,9 @@ td {
     color: black;
     /*font-family: 'Comic Sans MS', sans-serif; */
     font-size: 16px;
-    padding: 10px 20px;
+    padding: 15px 30px;
+    padding-right: 40px;
+    shape-margin: center;
 }
 
 
